# home-energy-analysis-tool

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  TODO.md  approach.md  code-review-notes.md  decisions.md  dev.Dockerfile  docker-compose.yaml  export_case_csv.js  fly.toml  notes.md  package-lock.json  package.json  root.dockerfile  suggestions.txt  tasks.md
heat-stack/: .dockerignore  .env.example  .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  README.md  check-coverage.js  check-uncovered.js  eslint.config.js  fly.toml  log-in-configuration.md  login-config.github.md  login.google.config.md  package-lock.json  package.json  playwright.config.ts  prepare.sh  prettier.js  prisma.config.js  pyproject.toml  rebuild.sh  refactor-plan.txt  tailwind.config.ts  todo.txt  tsconfig.json  vite.config.ts
heat-stack/.github/workflows/: deploy.yml  label-sub-issue.yml
heat-stack/.storybook/: main.ts
heat-stack/app/: App.css  WeatherExample.d.ts  global_constants.ts  root-original.tsx  root.tsx  root_original.tsx  root_original_v2.3.tsx  sessions.ts
heat-stack/app/components/: CaseSummary.tsx  WeatherExample.tsx  address-geocode-lookup.tsx  error-boundary.tsx  main-nav.tsx  spinner.tsx  user-dropdown.tsx
heat-stack/app/constants/: error-messages.ts
heat-stack/app/hooks/: usePython.ts  useRulesEngine.ts
heat-stack/app/pycode/: calculate_with_csv.py  get_analytics.py  get_normalized_output.py  lookup_design_temp_to_display.py  parse_all.py  parse_gas_bill.py  process.py  roundtrip_analytics.py  type_compatibility.md  util_functions.py
heat-stack/app/routes/: averageTemperature.js  cases.test.ts  geocode.test.ts  geocode.ts  geocode.tsx  getCountyId.js  homes.tsx
heat-stack/app/utils/: GeoCodeUtilClient.ts  GeocodeUtil.js  GeocodeUtil.ts  WeatherUtil.js  WeatherUtil.ts  auth.server.ts  cache.server.ts  coerceUsageDataTypes.ts  constants.ts  convert.ts  data-parser.test.ts  data-parser.ts  date-temp-util.test.ts  date-temp-util.ts  dateHelpers.ts  db.server.ts  deserializeUsageData.ts  email.server.ts  env.server.ts  file-upload-handler.test.ts  file-upload-handler.ts  headers.server.ts  index.test.ts  index.ts  misc.tsx  misc.use-double-check.test.tsx  permissions.ts  pyodide.test.ts  pyodide.ts  pyodide.util.js  pyodide.util.ts  recalculateFromBillingRecordsChange.ts  recalculateFunction.ts  rules-engine.test.ts  rules-engine.ts  user.ts
heat-stack/docs/: database.md  guidelines-for-editing-epic-stack-files.md  login.github.config.md  login.google.config.md  managing-app.md  signup.resend.config.md
heat-stack/heat-stack/storybook-static/: iframe.html  index.html  project.json
heat-stack/model/: Cases.tsx  HeatLoadAnalysis.tsx  Home.tsx  Homes.tsx  Location.tsx  NaturalGasBill.tsx  NaturalGasBillRecord.tsx  NaturalGasBillRecords.tsx  OilPropaneBill.tsx  OilPropaneBillRecord.tsx  OilPropaneBillRecords.tsx
heat-stack/models/: EnergyUsePeriod.tsx  HeatingLoadAnalysis.tsx  Home.tsx  Location.tsx
heat-stack/other/: .dockerignore  Dockerfile  litefs.yml
heat-stack/other/patches/: @remix-run+dev+1.19.1.patch
heat-stack/other/utils/: update-pyodide-lock.js
heat-stack/prisma/: ERD.md  README.md  schema.prisma  seed-util.ts  seed-utils.ts  seed.ts
heat-stack/prisma/migrations/: seed-users.migration.ts
heat-stack/public/: site.webmanifest  tooltips.txt
heat-stack/public/help/: design_temperature.help.md  design_temperature_override.help.md  download.help.md  foo.md  heat_loss_graph.help.md  heating_demand_graph.help.md  heating_system_efficiency.help.md  living_area.help.md  upload_file.md  whole_home_heat_loss_graph.help.md
heat-stack/public/pyodide-env/: annotated_types-0.6.0-py3-none-any.whl  annotated_types-0.7.0-py3-none-any.whl  pydantic-2.10.5-py3-none-any.whl  pydantic-2.10.6-py3-none-any.whl  pydantic-2.5.2-py3-none-any.whl  pydantic_core-2.14.5-cp311-cp311-emscripten_3_1_32_wasm32.whl  pydantic_core-2.27.2-cp313-cp313-pyodide_2025_0_wasm32.whl  pyodide-lock.json  pyodide.js.map  pyodide.mjs.map  typing_extensions-4.11.0-py3-none-any.whl  typing_extensions-4.14.0-py3-none-any.whl
heat-stack/scripts/: seed-prod.ts
heat-stack/server/: index.ts
heat-stack/stories/: Button.stories.ts  Button.tsx  Header.stories.ts  Header.tsx  Page.stories.ts  Page.tsx  button.css
heat-stack/tests/: create-case.ts  db-utils.ts  playwright-coverage-utils.ts  playwright-heat-utils.ts  playwright-helper.ts  playwright-utils.ts  seed-test.ts  temp.txt  test-utils.ts  users-admin-edit.spec.ts  utils.ts
heat-stack/tests/e2e/: 2fa.test.ts  admin-manage-users.test.ts  cases-auth.test.ts  cases-list-admin-user.test.ts  energy-analysis.test.ts  error-boundary.test.ts  note-images.test.ts  onboarding.test.ts  passkey.test.ts  (+4 more)
heat-stack/types/: case-form.ts  index.d.ts  index.ts  single-form.ts  types.ts  vite-env-only.d.ts
python/: .gitignore  Makefile  README.md  check-version.sh  conftest.py  fix-syntax-rules.sh  get-python-cmd.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup-python-v2.sh  setup-python-windows.bat  setup-python.sh  todo.txt  x.txt
rules-engine/: .gitignore  Makefile  README.md  makefile  pyproject.toml  requirements-dev.txt  requirements.txt  setup-wheel.sh
rules-engine/lib/: constants.py  home.py  weather.py
rules-engine/scripts/: validate_counties.py
(+411 files in other folders)
