[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rules-engine"
version = "0.0.1"
requires-python = ">=3.13,<3.14"
dependencies = [
    "annotated-types==0.7.0",  # via pydantic
    "pydantic==2.10.6",        # via rules-engine (pyproject.toml)
    "pydantic-core==2.27.2",   # via pydantic
    "typing-extensions==4.14.0",  # via pydantic and pydantic-core
]

[project.optional-dependencies]
dev = [
    "black==23.3.0",
    "build==1.2.2.post1",
    "chardet==5.2.0",
    "click==8.1.3",
    "iniconfig==2.0.0",
    "isort==5.12.0",
    "mypy==1.4.0",
    "mypy-extensions==1.0.0",
    "openpyxl==3.1.4",
    "packaging==23.1",
    "pathspec==0.11.1",
    "pip-tools==7.4.1",
    "platformdirs==3.7.0",
    "pluggy==1.0.0",
    "pydocstyle==6.3.0",
    "pyproject-hooks==1.2.0",
    "pytest==7.3.2",
    "snowballstemmer==2.2.0",
    "types-openpyxl==3.1.4.20240626",
    "wheel==0.45.1",
]

[tool.isort]
profile = "black"

[tool.mypy]
disallow_any_generics = true
disallow_incomplete_defs = true

[tool.pydocstyle]
select = ["D207", "D208", "D3", "D417"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
data = ["*.csv"]

[tool.uv.sources]
rules-engine = { workspace = true }

[tool.uv.workspace]
members = [
    ".",
]
