[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="rules-engine"
version="0.0.1"
requires-python=">=3.11.3"
dependencies = [
    "pydantic",
    "greenbutton_objects"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "openpyxl",
    "pydantic",
    "pydocstyle",
    "pytest",
    "types-openpyxl",
]

[tool.isort]
profile = "black"

[tool.mypy]
disallow_any_generics = true
disallow_incomplete_defs = true

[tool.pydocstyle]
select = "D207,D208,D3,D417"
